# SPINE

./: .env.example  .gitignore  .prettierignore  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  docker-compose.minimal.yml  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml
.github/: CODEOWNERS  pull_request_template.md
app/webapp/: package-lock.json  package.json  tsconfig.json
databases/timescaledb/: init_timescaledb.sql
docs/: architecture.md  code_of_conduct.md  developer_guide.md
docs/contributing/: README.md  code_of_conduct.md  developer_guide.md
modules/ingress/mqtt_subscriber/: .dockerignore  .env.example  Cargo.toml  Dockerfile  Dockerfile.dev  README.md
modules/ingress/mqtt_subscriber/src/: config.rs  main.rs  models.rs
modules/ingress/mqtt_subscriber/src/api/: mod.rs  models.rs  routes.rs
modules/ingress/mqtt_subscriber/src/kafka/: producer.rs
modules/ingress/mqtt_subscriber/src/mqtt/: mod.rs  subscriber.rs
modules/ingress/mqtt_subscriber/src/processor/: handler.rs  mod.rs
services/mqtt_subscriber/: Cargo.toml  Dockerfile  README.md
services/mqtt_subscriber/src/: config.rs  handlers.rs  main.rs  models.rs  mqtt.rs
services/mqtt_subscriber/src/api/: handlers.rs  models.rs  routes.rs
services/mqtt_subscriber/src/kafka/: mod.rs  producer.rs
services/mqtt_subscriber/src/metrics/: message_metrics.rs  mod.rs  ring_buffer.rs  windowed.rs
services/mqtt_subscriber/src/mqtt/: connection.rs  subscriber.rs
services/mqtt_subscriber/src/processor/: handler.rs
(+474 files in other folders)
