[package]
name = "mqtt_subscriber"
version = "0.1.0"
edition = "2021"

[dependencies]
# MQTT client
rumqttc = "0.24.0"

# Kafka
rdkafka = "0.36.2"
serde_json = "1.0.128"

# Async runtime
tokio = { version = "1.28.0", features = ["full"] }

# Web framework
axum = "0.7.4"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "cors"] }

# Serialization/deserialization
serde = { version = "1.0.160", features = ["derive"] }

# Logging and environment
env_logger = "0.11.7"
log = "0.4.17"
dotenv = "0.15.0"

# Shared state management
tokio-stream = "0.1.14"

# OpenAPI documentation
utoipa = { version = "4.2.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }

# Added for the chrono dependency
chrono = "0.4"
